--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -32,7 +32,7 @@
        <ul>
             {% for post in most_commented_posts %}
                 <li>
-                    <a href=" post.get_absolute_url ">
+                    <a href="{{ post.get_absolute_url }}">
                         {{ post.title }}
                     </a>
                 </li>
