--- a/account/templates/account/menubar.html
+++ b/account/templates/account/menubar.html
@@ -10,6 +10,7 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="{% url 'account:dashboard' %}">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link active" href="{% url 'blog:post_list' %}">Blog</a>
+            <a class="nav-item nav-link active" href="{% url 'reference:reference_list' %}">Reference</a>
           </div>
         </div>
       </nav> 
