--- a/blog/templates/pagination.html
+++ b/blog/templates/pagination.html
@@ -1,6 +1,6 @@
 <div class="pagination">
     <span class="step-links">
-        {% if pagge.has_previous %}
+        {% if page.has_previous %}
             <a href="?page={{ page.previous_page_number }}">
                 Previous
             </a>
